--- a/style.css
+++ b/style.css
@@ -1,4 +1,111 @@
+/*----------generellt----------*/
+html {
+    --accentColor: #102512;
+    --accentColor2: #add8b0;
+    --accentColor3: #381b53;
+    --BGcolor: #e4f8d6;
+    --softCurves: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+    background-color: var(--BGcolor);
+    margin: 0;
+}
+
+h1,
+h2 {
+    color: var(--accentColor);
+    font-family: Limelight, "Segoe UI", sans-serif;
+    margin: 0.5em
+}
+
+h3 {
+    font-family: Limelight, "Segoe UI", sans-serif;
+    margin: 0.5em
+}
+
+
+/*----------header----------*/
+header {
+    background-color: var(--accentColor2);
+    margin: 0;
+    padding: 0.3em;
+    box-shadow: 0 0.3em 15px;
+}
+
+
+/*----------navigation----------*/
+nav {
+    margin: 1em;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5em;
+    list-style: none;
+    padding: 0;
+}
+
+nav li {
+    width: 20em;
+    background-color: var(--accentColor2);
+    padding: 0.4em;
+}
+
+section {
+    background-color: var(--accentColor3);
+    border-radius: var(--softCurves);
+    padding: 0.4em;
+    margin: 0 0 0.4em 0;
+    color: #fff;
+    font-size: 0.9rem;
+}
+
+section a {
+    color: #fff;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+}
+
+
+/* ----------Main---------- */
+main {
+    margin: 1em;
+}
+
+main nav {
+    margin: 0;
+}
+
+fieldset {
+    margin: 0.5em 0;
+    background-color: var(--accentColor2);
+    border: 0.15em solid var(--accentColor);
+    border-radius: var(--softCurves);
+}
+
+div {
+    margin: 0.5em;
+    background-color: var(--accentColor2);
+    border: 0.15em solid var(--accentColor);
+    border-radius: var(--softCurves);
+    padding: 0 0 0 0.75em;
+}
+
+
+/*----------footer----------*/
 footer {
+    background-color: var(--accentColor);
+    color: #fff;
+    text-align: center;
+    padding: 0.75em;
+    margin: 0.75em 0 0;
     display: flex;
     flex-direction: row;
     gap: 1em;
