--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1,
 h2 {
     color: var(--accentColor);
     font-family: Limelight, "Segoe UI", sans-serif;
-    margin: 0.5em
+    /* margin: 0.5em */
 }
 
 h3 {
@@ -30,14 +30,14 @@ h3 {
 header {
     background-color: var(--accentColor2);
     margin: 0;
-    padding: 0.3em;
-    box-shadow: 0 0.3em 15px;
+    padding: 0.2em 0.75em;
 }
 
 
 /*----------navigation----------*/
 nav {
-    margin: 1em;
+    margin: 0;
+    background-color: var(--accentColor);
 }
 
 nav ul {
@@ -47,15 +47,15 @@ nav ul {
     gap: 0.5em;
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 nav li {
-    width: 20em;
-    background-color: var(--accentColor2);
+    /* background-color: var(--accentColor); */
     padding: 0.4em;
 }
 
-section {
+/* section {
     background-color: var(--accentColor3);
     border-radius: var(--softCurves);
     padding: 0.4em;
@@ -66,21 +66,16 @@ section {
 
 section a {
     color: #fff;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-}
+} */
 
 
 /* ----------Main---------- */
 main {
-    margin: 1em;
-}
-
-main nav {
-    margin: 0;
+    margin: 0.75em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5em;
 }
 
 fieldset {
@@ -91,11 +86,17 @@ fieldset {
 }
 
 div {
-    margin: 0.5em;
-    background-color: var(--accentColor2);
-    border: 0.15em solid var(--accentColor);
+    background-color: var(--accentColor3);
+    color: #fff;
+    padding: 0.75em;
     border-radius: var(--softCurves);
-    padding: 0 0 0 0.75em;
+    width: 48%;
+    box-shadow: 0.3em 0.3em 5px gray;
+}
+
+div a {
+    color: #fff;
+    text-decoration: none;
 }
 
 
