--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -11,11 +11,12 @@ html {
 
 /* ----------grid---------- */
 body {
-    /* display: grid; */
+    display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 82px auto 53px;
-    grid-area:
+    grid-template-rows: auto auto 800px auto;
+    grid-template-areas:
         "header header"
+        "nav nav"
         "main aside"
         "footer footer";
 }
@@ -24,6 +25,12 @@ body {
 /* ----------header---------- */
 header {
     grid-area: header;
+}
+
+
+/* ----------nav---------- */
+nav {
+    grid-area: nav;
 }
 
 
@@ -52,4 +59,5 @@ header {
 footer {
     grid-area: footer;
     gap: 1.5em;
+    margin: 0;
 }
