--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -8,12 +8,16 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h2 {
+    color: #fff;
+}
+
 
 /* ----------grid---------- */
 body {
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: auto auto 800px auto;
+    grid-template-rows: auto auto auto auto;
     grid-template-areas:
         "header header"
         "nav nav"
@@ -40,19 +44,55 @@ nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 0.5em;
+    /* gap: 0.5em; */
 }
 
-.productCards:hover {
+main div {
+    margin: 0.4em;
+    width: 20em;
+    transition: background-color 0.4s;
+}
+
+main div:hover {
     background-color: var(--accentColor);
+}
+
+main div .imgPlaceholder {
+    width: 17em;
+    height: 17em;
+    background-color: var(--BGcolor);
+}
+
+main div .imgPlaceholder p {
+    padding: 0;
+}
+
+#cardContainers .priceClass {
+    font-family: Limelight, "Segoe UI", sans-serif;
+    font-size: 1.2em;
+    display: inline-block;
+}
+
+#cardContainers button {
+    float: right;
+    margin: 1em;
+    padding: 0.4em;
+    font-size: 1em;
+    background-color: var(--accentColor2);
+    border: 0;
+    border-radius: var(--softCurves);
+    box-shadow: 0.2em 0.2em 5px var(--accentColor);
 }
 
 
 /* ----------kundvagn---------- */
 #shoppingCart {
     grid-area: aside;
+    padding: 0 0.75em;
     background-color: var(--accentColor3);
 }
+
+/* #shoppingCart */
 
 
 /* ----------footer---------- */
