--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav ul {
     flex-wrap: wrap;
     gap: 0.5em;
     list-style: none;
-    padding: 0;
+    padding: 0 0 0 1em;
     margin: 0;
 }
 
